# LSRWA

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
config/: database.toml
contracts/: Cargo.toml  lib.rs
metadata/: metadata.scale
migrations/: 20230501000000_create_schema.sql  20230501000001_create_functions.sql  20230501000002_init_data.sql  20230502000000_add_kyc_tables.sql  20230701000000_create_event_queue.sql
scripts/: deploy_contract.rs  download_metadata.rs
solidity/: .env.example  README.md  hardhat.config.js  package.json
solidity/contracts/: LsrwaExpress.sol
solidity/scripts/: deploy-testnet.js  interact-testnet.js
src/: lib.rs  main.rs
src/api/: blockchain.rs  error.rs  handlers.rs  kyc.rs  mod.rs  routes.rs
src/contract/: mod.rs
src/db/: kyc_repository.rs  migration.rs  mod.rs  pg.rs
src/models/: activity_log.rs  balance.rs  blockchain_request.rs  epoch.rs  kyc.rs  mod.rs  reward.rs  system_parameter.rs  user.rs
src/services/: blockchain_service.rs  mod.rs
src/services/indexer/: event_processor.rs  event_queue.rs  event_types.rs  mod.rs
