[package]
name = "lsrwa-express-rust"
version = "0.1.0"
edition = "2021"
description = "Database schema design and initial setup for LSRWA Express vault protocol"
authors = ["LSRWA Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Database
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }

# Async runtime
tokio = { version = "1.28.1", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Error handling
anyhow = "1.0.71"

# Logging
log = "0.4.17"

# Configuration
dotenv = "0.15.0"

# Utilities
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
