[package]
name = "lsrwa-express-rust"
version = "0.1.0"
edition = "2021"
description = "Database schema design and initial setup for LSRWA Express vault protocol"
authors = ["LSRWA Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Database
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }

# Async runtime
tokio = { version = "1.28.1", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Error handling
anyhow = "1.0.71"
thiserror = "1.0.40"

# Logging
log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Configuration
dotenv = "0.15.0"
config = "0.13.1"

# Utilities
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
rand = "0.8.5"
async-trait = "0.1.68"
lazy_static = "1.4.0"

# Web framework
axum = { version = "0.6.18", features = ["headers", "macros"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
headers = "0.3.8"

# HTTP client
reqwest = { version = "0.11.18", features = ["json"] }

# Smart contract interaction
subxt = { version = "0.31.0", features = ["substrate-compat"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
