[package]
name = "lsrwa_express_contract"
version = "0.1.0"
authors = ["LSRWA Team"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "4.3.0", default-features = false }

[lib]
name = "lsrwa_express_contract"
path = "lib.rs"
crate-type = [
    "cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "ink_e2e/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.release]
overflow-checks = false 