[package]
name = "lsrwa_express_contract"
version = "0.1.0"
authors = ["LSRWA Team"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }
ink_engine = { version = "4.3.0", default-features = false, optional = true }
scale-decode = { version = "0.9.0", default-features = false, optional = true }
scale-encode = { version = "0.5.0", default-features = false, optional = true }

[dev-dependencies]
ink_e2e = { version = "4.3.0", default-features = false }

[lib]
name = "lsrwa_express_contract"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "ink_engine/std",
    "scale-decode/std",
    "scale-encode/std",
]
ink-as-dependency = []
e2e-tests = []
__ink_dylint_Storage = []
__ink_dylint_EventBase = []
__ink_dylint_Constructor = []

[profile.release]
overflow-checks = false 